src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-using-fn-items.rs
fn foo(x:fn(&u8, &u8), y: Vec<&u8>, z: &u8) {
  y.push(z); //~ ERROR lifetime mismatch
}

fn main() { }
